ecom_website/styles.css
@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;300;400;500;700;800&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "JetBrains Mono", monospace;
  font-weight: 700;
}

html {
  scroll-behavior: smooth;
}

body {
  overflow-x: hidden;
}


nav {
  width: 100%;
  max-width: 1200px;
  padding: 0 24px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  margin-bottom: 48px;
}

img {
  width: 100%;
  height: 100%;
  max-height: 50vh;
  padding: 20px;
}

.logo {
  width: 40px;
  padding: 0;
}

.logo__holder {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 4px;
  margin: 0;
  border: 1px solid #1769d2;
  border-radius: 4px;
  margin-top: 15px;
}

.logo__text {
  text-align: center;
  color: #1769d2;
  text-decoration: none;
}

.logo__holder--white {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 4px;
  margin: 0;
  border: 1px solid white;
  border-radius: 4px;
  margin-top: 15px;
}

.logo__text--white {
  color: white;
}

.blue {
  color: #1769d2;
}

ul {
  display: flex;
}

li {
  list-style-type: none;
}

.nav__link {
  margin-left: 16px;
  text-decoration: none;
  font-size: 20px;
  font-weight: 800;
  color: #1769d2;
  padding: 4px;
}

.nav__link:hover {
  text-decoration: underline;
}

.nav__link--primary {
  border: 2px solid #1769d2;
  background-color: #1769d2;
  color:white;
  border-radius: 4px;
}

.nav__link--primary:hover {
  text-decoration: none;
}

.nav__container {
  width: 100%;
  max-width: 1200px;
  padding: 0 24px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

.btn__menu {
  background-color: transparent;
  font-size: 40px;
  border: none;
  text-align: center;
  color: #1769d2;
  display: none;
}

.menu__backdrop {
  height: 40vh;
  position: absolute;
  background-color: #242424f3;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 3;
  display: flex;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  transition: all 300ms ease;
  opacity: 0;
  transform: translate(100%);
}

.btn__menu--close {
  position: absolute;
  top: 10px;
  right: 20px;
  padding: 8px;
  color: white;
}

.menu__link {
  text-decoration: none;
  color: white;
  font-size: 40px;
}

.menu__link:hover {
  text-decoration: underline;
}

.no__underline {
  text-decoration: nonef;
}

.menu--open .menu__backdrop {
  display: flex;
  visibility: visible;
  opacity: 1;
  transform: translate(0);
}

.menu__links {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.menu__open {
  max-height: 20vh;
  overflow: hidden;
}

.menu__list {
  padding: 32px 0;
}

/* LANDING */

#landing {
  background-color: #6eb5f85d;
}

header {
  height: calc(100vh - 80px);
}

.header__container {
  width: 100%;
  max-width: 720px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-bottom: 128px;
}

.header__description {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 48px;
}

h1 {
  font-size: 48px;
  color: #1769d2;
  margin-bottom: 24px;
  text-align: center;
}

h2 {
  text-align: center;
}

button {
  cursor: pointer;
}

button:active {
  transform: translateY(1px);
}

a:hover {
  text-decoration: underline;
}

.btn {
  background-color: #1769d2;
  color: white;
  padding: 12px 24px;
  font-size: 20px;
  border-radius: 4px;
  border: none;
  margin-top: 24px;
}

/* z index to fix elements being on top of each other or not */

.header__img--wrapper {
  padding: 20px;
  z-index: 2;
}

.container {
  padding: 56px 0;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.row__column {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.no-cursor {
  cursor: not-allowed;
}

/* HIGHLIGHTS */

#highlights {
  position: relative;
  max-width: 100vw;
}

#highlights:after,
#highlights:before {
  background: url("assets/wave.svg");
  content: "";
  position: absolute;
  width: 100%;
  height: 12vw;
  left: 0;
  z-index: 1;
  background-size: cover;
  background-repeat: no-repeat;
}

#highlights:before {
  transform: translateY(-100%);
  top: 1px;
}

#highlights:after {
  transform: translateY(100%) rotate(180deg);
  bottom: 1px;
}

.highlight__wrapper {
  padding-top: 48px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.highlight {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 24px;
  width: calc(100% / 3);
}

.highlight__img {
  width: 100px;
  height: 100px;
  border: 3px solid #1769d2;
  color: #1769d2;
  border-radius: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 36px;
  margin-bottom: 24px;
}

.hightlights__subtitle {
  text-align: center;
  font-size: 20px;
  margin-bottom: 24px;
}

.highlight__para {
  text-align: center;
  max-width: 280px;
  padding-top: 16px;
  font-weight: 400;
  font-size: 18px;
  
}

/* FEATURED */

#featured {
  padding-top: 8vw;
  background-color: #6eb5f85d;
  position: relative;
  max-width: 100vw;
}

/* small bug with one pixel white gap in a smaller screen*/

#featured:after {
  background: url("assets/wave2.svg");
  content: "";
  position: absolute;
  width: 100%;
  height: 12vw;
  left: 0;
  z-index: 1;
  background-size: cover;
  background-repeat: no-repeat;
  transform: translateY(100%) rotate(180deg);
  bottom: 0px;
}

.section__title {
  font-size: 36px;
}

.books {
  display: flex;
  flex-wrap: wrap;
}

.book {
  width: 25%;
  padding: 24px;
}

.book__img {
  max-height: 380px;
  transition: all 300ms ease;
  cursor: no-drop;
  
}

.book__img--wrapper {
  margin-bottom: 8px;
  border-radius: 4px;
  overflow: hidden;
  display: flex;
}

.book:hover .book__img {
  transform: scale(1.05);
}

.book__title {
  font-size: 20px;
  margin-bottom: 8px;
}

.book__title:hover {
  text-decoration: underline;
  cursor: not-allowed;
}

.book__ratings {
  margin-bottom: 8px;
  color: #fabf2a;
}

.book__price--normal {
  text-decoration: line-through;
  padding-right: 6px;
  color: lightslategray;
}

/* LATEST */

#latest {
  padding-top: 8vw;
}

.latest__books {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

/* EXPLORE */

#explore {
  margin-top: 8vw;
  background-color: #6eb5f85d; 
  position: relative;
  max-width: 100vw;
}

#explore:before {
  background: url("assets/wave2.svg");
  content: "";
  position: absolute;
  width: 100vw;
  height: 12vw;
  left: 0;
  z-index: 1;
  background-size: cover;
  background-repeat: no-repeat;
  transform: translateY(-100%);
  top: 0px;
}


.explore__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* FOOTER */

footer {
  background-color: #242424;
}

.footer__logo--img {
  width: 160px;
  filter: grayscale(1) invert(1);
}

.footer__logo {
  display: flex;
}

.footer__link,
.footer__copyright {
  color: white;
  text-decoration: none;

}

.footer__list {
  margin: 24px;

}

.footer__link {
  padding: 0 8px;
  margin-bottom: 24px;
  margin-right: 8px;
}

/* PHONES/TABLETS */

@media(max-width: 768px) {
  .header__description {
    padding: 0 24px;
  }

  h1 {
    font-size: 40px;
  }

  h2 {
    font-size: 26px; 
  }

  button {
    font-size: 18px;
  }

  .book {
    width: 50%;
  }

  .hightlights__subtitle {
    font-size: 18px;
  }

  .highlight__para {
    font-size: 14px;
  }

  .section__title {
    font-size: 28px;
  }

  .highlight__img {
    width: 75px;
    height: 75px;
  }
}

@media(max-width: 550px) {
  .nav__links {
    display: none;
  }

  .btn__menu {
    display: block;
  }

  .highlight {
    width: 100%;
    margin-bottom: 24px;
  }

  .highlight:not(:last-child) {
    margin-bottom: 24px;
  }

  #featured:after {
    bottom: -1px;
  }

  .header__description {
    padding-top: 84px;
  }
}

/* PHONES */

